# deeplob-serve

./: .clang-format  .gitignore  BENCHMARKS.md  DESIGN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/model/: cnn_lstm.yaml  transformer.yaml
cpp/: CMakeLists.txt
cpp/bench/: CMakeLists.txt  bench_inference_latency.cpp  latency_histogram.hpp
cpp/bench/fixtures/: model_b1.onnx  model_b32.onnx  model_b64.onnx  model_b8.onnx
cpp/cmake/: OnnxRuntime.cmake  Sanitizers.cmake  Warnings.cmake
cpp/inference/: CMakeLists.txt  inference_engine.cpp  inference_engine.hpp
cpp/inference/tests/: test_inference_engine.cpp
cpp/inference/tests/fixtures/: test_model.onnx
cpp/smoke/: CMakeLists.txt  test_version.cpp  version.cpp  version.hpp
src/deeplob/: __init__.py
src/deeplob/data/: fi2010.py  labeling.py  lob.py  synthetic.py  windowing.py
src/deeplob/evaluation/: compare.py  metrics.py  splits.py
src/deeplob/export/: onnx_export.py  parity.py
src/deeplob/models/: baselines.py  cnn_lstm.py  transformer.py
src/deeplob/simulation/: pnl.py  run_simulation.py
src/deeplob/training/: dataset.py  device.py  lightning_module.py  seeding.py  train.py
tests/: test_version.py
tests/data/: test_fi2010.py  test_labeling.py  test_lob.py  test_synthetic.py  test_windowing.py
tests/evaluation/: test_compare.py  test_metrics.py  test_splits.py
tests/export/: test_onnx_export.py  test_parity.py
tests/models/: test_baselines.py  test_cnn_lstm.py  test_transformer.py
tests/simulation/: test_pnl.py  test_run_simulation.py
tests/training/: test_dataset.py  test_device.py  test_lightning_module.py  test_seeding.py
