[project]
name = "deeplob-serve"
version = "0.1.0"
description = "Deep learning on limit order books (DeepLOB CNN-LSTM + Transformer) with a hand-tuned C++ ONNX Runtime inference engine and microsecond-scale latency benchmarks."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "wuyutian4071" }]
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "torch>=2.3",
    "lightning>=2.3",
    "hydra-core>=1.3",
    "mlflow>=2.14",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    # torch.onnx.export defaults to the newer dynamo-based exporter (dynamo=True), which
    # needs onnxscript -- confirmed by actually running the export and hitting
    # ModuleNotFoundError, not assumed from documentation. Installing it rather than opting
    # into the older TorchScript-based exporter (dynamo=False), since that path is the one
    # being deprecated.
    "onnxscript>=0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deeplob"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # bugbear
    "C4",             # comprehensions
    "SIM",            # simplify
    "RUF",            # ruff-specific
    "NPY",            # numpy legacy random, etc.
]
ignore = [
    "N803", "N806",   # allow math-style variable names (X, y, W) in ML code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802"]

[tool.ruff.lint.isort]
# Declare the first-party package explicitly so import sorting is identical across
# environments (local editable install vs. a clean CI runner), where ruff's automatic
# first-party detection can otherwise disagree -- same reasoning as statlab's own
# pyproject.toml, mirrored here rather than rediscovered.
known-first-party = ["deeplob"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src", "tests"]
# Resolve the `deeplob` package from source (src/ layout) so it's analyzed as first-party
# rather than an installed third-party dependency -- identical behavior between an editable
# local install and a clean CI runner (same reasoning as statlab's own pyproject.toml).
mypy_path = "src"
explicit_package_bases = true
plugins = []

[[tool.mypy.overrides]]
module = ["sklearn.*", "onnxruntime.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["deeplob"]
